# pyweb_engineering_hw_2

./: README.md  main.py  pyproject.toml
bot_assistant/: birthday_module.py  parsing_module.py  person_data_module.py  phone_book_module.py  save_module.py
