[tool.poetry]
name = "pyweb-engineering-hw-1"
version = "0.1.0"
description = ""
authors = ["Abboth <Alexmikhailov90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
